# rust-os

./: Cargo.toml  LICENCE  README.md
.cargo/: config.toml
src/: main.rs  vga_buffer.rs
