[package]
name = "rust-os"
version = "0.1.0"
authors = ["Dhairya Nadapara <dhairyanadapara98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#disabled unwinding(freeing allocated memory) in case of panic
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
